# spherical_3dgs

./: .gitignore  README.md  pixi.toml  pyproject.toml
docs/: jetson_colmap_cuda_build.md  jetson_colmap_cuda_comparison.md  jetson_equirectangular_colmap_run.md  macos_equirectangular_colmap_run.md  raw_fisheye_sfm_training_plan.md
src/spherical_3dgs_prep/: __init__.py  cli.py
